# app-python-airflow

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: api_test.yaml
.github/workflows/tests-git/: test_api_status.py
app-python/dags/: configinc.py  create_tables.py  models.py
app-python/data/: 2021-11-15-AMZN.json  2021-11-15-GOOG.json  2021-11-15-MSFT.json  2021-11-16-AMZN.json  2021-11-16-GOOG.json  2021-11-18-AMZN.json  2021-11-19-GOOG.json  2021-11-20-AMZN.json  2021-11-20-MSFT.json  2021-11-22-GOOG.json  2021-11-22-MSFT.json  2021-11-23-AMZN.json  2021-11-24-AMZN.json  2021-11-24-GOOG.json  2021-11-24-MSFT.json  2021-11-25-MSFT.json  2021-11-26-GOOG.json  2021-11-27-AMZN.json  2021-11-27-GOOG.json  2021-11-27-MSFT.json  delete.sh
app-python/src/: AMZN.json  GOOG.json  MSFT.json  populatorDB.py  webserver_plots.py
app-python/src/templates/: index.html
app-python/tests/.pytest_cache/v/cache/: nodeids
app-python/tests/data/core/: test_api_core_status.py  test_db_core_operate.py
app-python/tests/data/dags-test/: test_aggregation_data.py  test_dummydag_plot.py
