[tool.poetry]
name = "itba-cde-tpf-python-applications-marcelogramma"
version = "0.1.0"
description = ""
authors = ["marcelogramma <marcelogrammatico02@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.2"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"
black = "^21.11b1"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
